# ncsh

./: .gitignore  .gitmodules  .ncsh_history  BUGS.md  CMakeLists.txt  COMPILE.md  LICENSE  NOTES.md  READLINE.md  README.md  _bugs.txt  _compile.txt  _docker.txt  _notes.txt  a.out  acceptance_tests.sh  backspace.c  bugs.txt  clean_history.sh  crash-6b8cf103c585f05e41d4e7273769bf15f60b2f44  crash-b80d7c1354fa5f0e00736f6f90b560596889f767  crash-facf95000ff0f5ec8679752f4953708af6f649ea  create_corpus_dirs.sh  dockerfile  expected_test_output.txt  format.sh  history.c  main.c  makefile  makefile.release  ncsh.c  ncsh.h  ncsh_args.c  ncsh_args.h  ncsh_autocompletions_fuzz.sh  ncsh_autocompletions_fuzzr.sh  ncsh_builtin_commands.c  ncsh_builtin_commands.h  ncsh_builtin_commands_tests  ncsh_commands.c  (+56 more)
AUTOCOMPLETIONS_CORPUS/: r4  r5  r6  root
acceptance_tests/: 2  Rakefile  acceptance_tests.rb  custom_prompt_test_runner.rb  directory_none_acceptance_test_runner.rb  directory_none_acceptance_tests.rb  directory_none_no_user_acceptance_test_runner.rb  directory_none_no_user_acceptance_tests.rb  directory_normal_acceptance_test_runner.rb  directory_normal_acceptance_tests.rb  directory_normal_no_user_acceptance_test_runner.rb  directory_normal_no_user_acceptance_tests.rb  directory_short_acceptance_test_runner.rb  directory_short_no_user_acceptance_test_runner.rb  directory_short_no_user_acceptance_tests.rb  expansion.rb  failures.sh  gentests.sh  multiline.rb  ncsh.gemspec  ni.sh  noninteractive_acceptance_test_runner.rb  startup.rb  syntax.rb
development/: NOTES.md  jobctl  (+3 more)
(+551 files in other folders)
